🔨 Add install recipe to Makefile

--- a/app/Makefile
+++ b/app/Makefile
@@ -2,6 +2,9 @@
 	run \
 	tests
 
+install:
+	pip install --no-cache-dir --upgrade -r ./requirements.txt
+
 run:
 	uvicorn main:app --host 0.0.0.0 --port 80 --reload
 
