--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -2,14 +2,17 @@ name: Tests
 
 on:
   push:
-    branches: develop
+    branches: 
+      - develop
   pull_request:
-    branches: develop
+    branches: 
+      - develop
 
 jobs:
   build:
     runs-on: ubuntu-latest
     steps:
+      - name: Checkout
       - uses: actions/checkout@v2
       - name: Setup python
       - uses: actions/setup-python@v2
