--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -1,25 +1,17 @@
 name: Tests
-
-on:
-  push:
-    branches: 
-      - develop
-  pull_request:
-    branches: 
-      - develop
+on: [push, pull_request]
 
 jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout
       - uses: actions/checkout@v2
       - name: Setup python
-      - uses: actions/setup-python@v2
+        uses: actions/setup-python@v2
         with:
           python-version: '3.9'
           architecture: 'x64'
-      - name: Install packages
+      - name: Install dependencies
         run: make install
       - name: Check format
         run: make check
