🔨 Add check and format recipes to Makefile

--- a/app/Makefile
+++ b/app/Makefile
@@ -1,7 +1,15 @@
 .PHONY: \
+	check \
+	format \
 	install \
 	run \
 	tests
+
+check:
+	python -m black --check .
+
+format:
+	python -m black . 
 
 install:
 	pip install --no-cache-dir --upgrade -r ./requirements.txt
