--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -6,13 +6,13 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
-        with:
-          path: app
       - name: Setup python
         uses: actions/setup-python@v2
         with:
           python-version: '3.9'
           architecture: 'x64'
+      - name: Move to app folder
+        run: cd app
       - name: Install dependencies
         run: make install
       - name: Check format
