--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -11,11 +11,9 @@ jobs:
         with:
           python-version: '3.9'
           architecture: 'x64'
-      - name: Move to app folder
-        run: cd app
       - name: Install dependencies
-        run: make install
+        run: cd app && make install
       - name: Check format
-        run: make check
+        run: cd app && make check
       - name: Check tests
-        run: make tests
+        run: cd app && make tests
